force-app/main/default/objects/Container_Request__c/Container_Request__c.object-meta.xml
<CustomObject>
    <description>Tracks a customer's portable storage request from intake through delivery scheduling.</description>
    <label>Container Request</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Container Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Container Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>