force-app/main/default/objects/Container_Request__c/fields/Container_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Container_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Container</label>
    <referenceTo>Container_Inventory__c</referenceTo>
    <relationshipName>ContainerRequests</relationshipName>
    <type>Lookup</type>
</CustomField>