force-app/main/default/objects/Container_Request__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8 ft</fullName>
            </value>
            <value>
                <fullName>12 ft</fullName>
            </value>
            <value>
                <fullName>16 ft</fullName>
                <default>true</default>
                <label>16 ft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>