force-app/main/default/objects/Container_Request__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>Service_Location__c</referenceTo>
    <relationshipName>ContainerRequests</relationshipName>
    <type>Lookup</type>
</CustomField>